# asteroids-bevy

./: .gitignore  Cargo.toml  README.md
assets/shaders/: star.frag  star.vert
src/: constants.rs  game_ui.rs  guns.rs  lib.rs  main.rs  mobs.rs  parralax.rs  player.rs  prelude.rs  state.rs
