[package]
name = "asteroids-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_cursor = "0.2.0"
bevy_pancam = "0.10.0"
bevy_rapier2d = "0.23.0"
noise = "0.8.2"
rand = "0.8.5"
